# sudoku_coop

./: .gitignore  README.md  compose.yaml  sudokupad_grid.html
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/src/sudoku_coop_api/: __init__.py  main.py
backend/src/sudoku_coop_api/api/: __init__.py  health.py
backend/src/sudoku_coop_api/core/: __init__.py  config.py  security.py
backend/src/sudoku_coop_api/sessions/: __init__.py  models.py  service.py
backend/src/sudoku_coop_api/websocket/: __init__.py  connection_manager.py  events.py
backend/tests/: conftest.py  test_limits.py  test_placeholder.py  test_security.py  test_session_codes.py  test_session_expiration.py  test_session_service.py  test_validation.py  test_websocket.py  test_ws_auth.py
extension/: README.md  index.html  manifest.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
extension/scripts/: postbuild.mjs
extension/src/: vite-env.d.ts
extension/src/background/: serviceWorker.ts
extension/src/content/: content.ts  debounce.test.ts  debounce.ts  geometry.test.ts  geometry.ts  gridDetector.ts  overlay.ts
extension/src/popup/: GuestPanel.tsx  HostPanel.tsx  Popup.tsx  api.ts  main.tsx  popup.css
extension/src/shared/: config.test.ts  config.ts  manifest.test.ts  messages.ts  parseBackendMessage.test.ts  parseBackendMessage.ts  types.ts  validation.test.ts  validation.ts
openspec/prompts/: extension_core.md  guest_click_event.md  hardening  host_overlay.md  init.md  websockets.md
(+32 files in other folders)
